--- a/index.html
+++ b/index.html
@@ -19,9 +19,41 @@
                 <a href="#" class="btn btn_animated">наш каталог</a>
             </div>
         </header>
+        <main>
+            <section class="section-about">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                        невероятное ощущение свободы
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
+                        <p class="paragraph margin-bottom-30px">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                        <h3 class="title-third margin-bottom-10px">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
+                        <p class="paragraph margin-bottom-50px">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                        <a href="#" class="btn-text">Узнать больше &rarr;</a>
+
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/photo-ballons-1.png" alt="photo-ballons-1" class="composition__photo composition__photo_n1">
+                            <img src="img/photo-ballons-2.png" alt="photo-ballons-2" class="composition__photo composition__photo_n2">
+                            <img src="img/photo-ballons-3.png" alt="photo-ballons-3" class="composition__photo composition__photo_n3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
+
+        </main>
 
     </div>
-    <section class="grid-test">
+
+
+
+
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">col-1-of-2</div>
             <div class="col-1-of-2">col-1-of-2</div>
@@ -50,7 +82,7 @@
             <div class="col-1-of-4">col-1-of-4</div>
             <div class="col-3-of-4">col-3-of-4</div>
         </div>
-    </section>
+    </section> -->
     
 </body>
 </html>
