--- a/index.html
+++ b/index.html
@@ -180,7 +180,13 @@
 
                 
             </section>
+
             <section class="section-feedBack">
+                <div class="bg-gradient"></div>
+                <video class="bg-video" autoplay muted loop>
+                    <source src="img/Hot air balloons-1.mp4">
+                    <source src="img/Hot air balloons-2.webm">
+                </video>
                 <div class="text-align-center margin-bottom-80px">
                     <h2 class="title-secondary title-secondary_white">
                         ОТЗЫВЫ НАШИХ КЛИЕНТОВ
@@ -188,12 +194,52 @@
                 </div>
                 <div class="row">
                     <div class="feedBack-card">
-                        <figure>
-
+                        <figure class="feedBack-card__img">
+                            <img src="img/feedBack-1.jpg" alt="persone">
+                            <figcaption class="feedBack-card__name">АНТОН РЯБИН</figcaption>
                         </figure>
                         <div class="feedBack-card__box">
                             <h3 class="title-third margin-bottom-10px">Я ПОЛУЧИЛ МАССУ ВПЕЧАТЛЕНИЙ</h3>
                             <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="feedBack-card">
+                        <figure class="feedBack-card__img">
+                            <img src="img/feedBack-2.jpg" alt="persone">
+                            <figcaption class="feedBack-card__name">ЛИЗА ФРОЛОВА</figcaption>
+                        </figure>
+                        <div class="feedBack-card__box">
+                            <h3 class="title-third margin-bottom-10px">ЭТО БЫЛО ВЕЛИКОЛЕПНО И НЕЗАБЫВАЕМО</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">забронировать</a>
+                </div>
+            </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="text-align-center margin-bottom-30px">
+                                    <h2 class="title-secondary">
+                                        ЗАБРОНИРОВАТЬ ТУР
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Имя фамилия" id="name" required>
+                                    <label for="name" class="form__lable">Ваше Имя и Фамилия</label>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Ваш email" id="email" required>
+                                    <label for="email" class="form__lable">Ваш email</label>
+                                </div>
+                                
+                            </form>
                         </div>
                     </div>
                 </div>
